--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-sonarjs": "^0.8.0-125",
-    "gh-pages": "^3.2.0"
+    "gh-pages": "^3.2.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   }
 }
